# monitor5G

./: README.md  elastic.yaml  jaegarprodnostorage.yaml  valuesjaeger.yaml
api_monitor_5g_scp/: Makefile
api_monitor_5g_scp_otel/: Dockerfile.reverseproxy  Makefile
depfiles/: deployInstructions  ekspv.yaml  opentelemetry-collector-demonset.yaml
downloadbatch/: 01e46c70cfd34458.json  066ad5376c3b8e3b.json  068c3be901b1430a.json  0837b0a1a88006a7.json  0b6bfbacab1a38e0.json  0ca2c1144e874a08.json  0e42b68f12fc3ece.json  1200ae83a936b095.json  13b585c09dcd11c8.json  15b73c3fd821d2a5.json  16694305bcecb2aa.json  1827696123ddd7e3.json  19a5a688226162be.json  1b5d95594b0a4b78.json  220ad9f8b632c906.json  2969745337fd1f99.json  2a72d3b1624fc822.json  2bd92cc51e3209ad.json  2e03000a06d72e48.json  32df52e0f22c1b48.json  33d0126869e3fdbd.json  36fe103dfcbc92d1.json  381c32532f4e8ed5.json  39fb3e8258a06b2f.json  3b03c22bc3724776.json  3d67695d417bfa63.json  494bb073258ec143.json  49954cd550598983.json  4b4cee749d1f1a0e.json  4d7f33d5ad47faa7.json  4dc5440cb0936721.json  50f754951e5eb287.json  52ee8c4fbb43767a.json  5b1ccf9e633ed07a.json  5bb9600200ab1538.json  5c0e2c9d4fbec82f.json  5da6b4445d47cc6f.json  60f07d29ac568ec5.json  65aefcff19a529d9.json  6836163b180813a6.json  (+17 more)
dummy/httpclientcpp/src/: CMakeLists.txt  main.cpp
dummyhttp/: Dockerfile.dummyhttp  main.go
dummyhttpclientcpp/: Dockerfile
dummyhttpservergo/: Dockerfile.dummyhttp
dummyhttpworking/: go.mod  go.sum  main.go
infradep/: cassandra-statefulset.yaml  cassandrapv.yaml  deployInstructions  need  (+4 more)
(+29 files in other folders)
